feat: 冻结 Agent 链路与评测基线